# AIdeaLabPRO

./: .env  .replit  app.py  bot.db  bot.env  bot.py  database.py  main.py  pyproject.toml  requirements.rtf  requirements.txt
attached_assets/: Pasted--dp-message-Command-start-a-1781675100876_1781675100876.txt  Pasted--dp-message-F-1781675042929_1781675042929.txt  Pasted-from-sqlalchemy-ext-asyncio-import-create-async-engine-_1781645687474.txt  Pasted-import-asyncio-from-aiogram-import-Bot-Dispatcher-types_1781644177834.txt  Pasted-import-asyncio-from-aiogram-import-Bot-Dispatcher-types_1781644559771.txt  Pasted-import-asyncio-from-aiogram-import-Bot-Dispatcher-types_1781644642430.txt  Pasted-import-asyncio-import-os-from-aiogram-import-Bot-Dispat_1781643804695.txt  Pasted-import-asyncio-import-os-from-aiogram-import-Bot-Dispat_1781643910073.txt  Pasted-import-asyncio-import-re-from-aiogram-import-Bot-Dispat_1781645305537.txt
