[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.29.0",
    "aiosqlite>=0.22.1",
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "gspread>=6.2.1",
    "oauth2client>=4.1.3",
    "openai>=2.42.0",
    "sqlalchemy>=2.0.51",
]
